<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.bottomsheet.BookBottomSheet">


    <TextView
        android:id="@+id/printType_TextView"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_height="50dp"
        android:text="Book Type"
        android:textSize="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <HorizontalScrollView
        android:id="@+id/HorizontalPrintType"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/printType_TextView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/printType_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/general"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/general"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/all"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/book"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/book"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/magazine"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/magazine"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/horror"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/horror"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/romance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/romance"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/fantasy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/fantasy"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/other"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/search"
        app:layout_constraintTop_toBottomOf="@+id/HorizontalPrintType"
        ></Button>







</androidx.constraintlayout.widget.ConstraintLayout>